--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@geoman-io/leaflet-geoman-free": "^2.18.3",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
