--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "format": "npx prettier --write .",
     "typecheck": "npx tsc --noEmit",
     "prepare": "husky",
-    "test": "jest",
+    "test": "npx jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "update-gtfs": "node scripts/update-gtfs-data.js"
   },
   "dependencies": {
     "@geoman-io/leaflet-geoman-free": "^2.18.3",
